kustomize/overlays/nerc-ocp-prod/ingresses/sso/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso
  namespace: scsj-86c3ca
  annotations:
    cert-manager.io/issuer: letsencrypt-issuer
    acme.cert-manager.io/http01-ingress-class: openshift-default
spec:
  ingressClassName: openshift-default
  tls:
  - hosts:
    - sso.southerncoalition.org
    secretName: sso-cert
  rules:
  - host: sso.southerncoalition.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sso
            port:
              number: 8080
